--- a/packages/apps/client/src/modules/player_control/styles/player_control.scss
+++ b/packages/apps/client/src/modules/player_control/styles/player_control.scss
@@ -1,6 +1,6 @@
 .player-control-drawer .MuiDrawer-paper {
-  width: 100%;
-  margin-left: 0;
+  width: calc(100% - 40px);
+  margin-left: 20px;
 
   transition: width 195ms cubic-bezier(0.4, 0, 0.6, 1) 0ms,
     margin-left 195ms cubic-bezier(0.4, 0, 0.6, 1) 0ms,
@@ -8,10 +8,30 @@
 }
 
 .player-control-drawer-small .MuiDrawer-paper {
-  width: calc(100% - 340px);
-  margin-left: 340px;
+  width: calc(100% - 400px);
+  margin-left: 380px;
 
   transition: width 225ms cubic-bezier(0, 0, 0.2, 1) 0ms,
     margin-left 225ms cubic-bezier(0, 0, 0.2, 1) 0ms,
     transform 225ms cubic-bezier(0, 0, 0.2, 1) 0ms !important;
+}
+
+.player-control-drawer .MuiDrawer-paper, .player-control-drawer-small .MuiDrawer-paper {
+  margin-bottom: 20px;
+
+  height: 100px;
+  overflow: visible;
+  border-top: none;
+
+  background-image: none !important;
+  border-radius: 10px;
+  backdrop-filter: blur(5px);
+}
+
+.player-dark .MuiDrawer-paper {
+  background-color: rgba($color: #78909c, $alpha: 0.1) !important;
+}
+
+.player-light .MuiDrawer-paper {
+  background-color: rgba($color: #FFF, $alpha: 0.5) !important;
 }
