add thumbnails, also downloads video and subtitles but these are unused for now

--- a/packages/apps/client/src/modules/player_control/styles/player_control.scss
+++ b/packages/apps/client/src/modules/player_control/styles/player_control.scss
@@ -23,7 +23,7 @@
   overflow: visible;
   border-top: none;
 
-  background-image: none !important;
+  //background-image: none !important;
   border-radius: 10px;
   backdrop-filter: blur(5px);
 }
